# Android-Mod-Menu-ImGui

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImGui_Impl_AndroidOpenGL2.cpp  ImGui_Impl_AndroidOpenGL2.h  ModMenuSurface.h  Mods.h  OrtographicView.h  Utils.h  admu_ut.h  icons.h  imgui_impl_android.cpp  imgui_impl_android.h  libil2cpp.so.h  meta_random.hpp  native-lib.cpp  obfuscator.hpp  ozModSharedLibraryManager.h  tabs.h
app/src/main/cpp/ImGui/: imgui.cpp  imgui.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h
app/src/main/cpp/ImGui/examples/example_android_opengl3/android/app/src/main/: AndroidManifest.xml
app/src/main/cpp/ImGui/examples/example_android_opengl3/android/app/src/main/java/: MainActivity.kt
app/src/main/cpp/Substrate/: CydiaSubstrate.h  SubstrateDebug.cpp  SubstrateHook.cpp  SubstratePosixMemory.cpp  SymbolFinder.cpp
app/src/main/cpp/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
app/src/main/java/androidx/viewbinding/systemui/: SuperActivity.java  SurfaceEmbedActivity.java  SystemOverlaySurface.java  UnityPlayerImpl.java
app/src/main/java/com/unity3d/player/: UnityPlayer.java  UnityPlayerActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
